# openbor

./: README.md
engine/: Makefile  OpenBOR  version.tmp  version.txt
engine/Logs/: OpenBorLog.txt
engine/Saves/: bor.cfg
engine/android/: -local.properties  build.sh  local.properties
engine/android/app/: build.gradle
engine/android/app/jni/: Application.mk
engine/android/app/jni/openbor/: Android.mk  video.c
engine/android/app/src/main/: AndroidManifest.xml
engine/android_openbor/: CMakeLists.txt
engine/android_openbor/android/: build.gradle
engine/android_openbor/android/app/: build.gradle
engine/android_openbor/android/app/src/main/: AndroidManifest.xml
engine/android_openbor/android/gradle/wrapper/: gradle-wrapper.properties
engine/android_openbor/src/: main.c  working_main.c
engine/sdl/: control.c  menu.c
engine/source/: utils.c
engine/wii/: threads.c
